--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,13 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^5.1.0",
-    "socket.io": "^4.8.1",
-    "cors": "^2.8.5"
+    "googleapis": "^128.0.0",
+    "openai": "^4.20.0",
+    "replicate": "^1.0.1",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.0"
@@ -19,4 +23,4 @@
   "engines": {
     "node": ">=18.0.0"
   }
-} 
+}
