--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-router-dom": "^6.26.2",
     "react-webcam": "^7.2.0",
     "recharts": "^2.12.7",
+    "replicate": "^1.0.1",
     "socket.io-client": "^4.8.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
