--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,4 @@ GOOGLE_SHEETS_API_KEY=AIzaSyD0iw_4SVkoghunDNnI_kLoT-gN5v18N6U
 GOOGLE_SHEET_ID=1tX9lBjDlwYagGEfbWND7SytUHHHrEz5_B7pkCrWBObA
 
 export REPLICATE_API_TOKEN=r8_J8TT2567w86DPDgRdMM2pMk0Zywidvc0QlQHL
+RENDER_URL=https://fc2025.onrender.com
