--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,4 @@ OPENAI_API_KEY=sk-proj-5CPdqEDmOF5-XGfHNveI3WS0X7QhS4XwmBFIVwjzd-u96IJm8asD-MxVe
 GOOGLE_SHEETS_API_KEY=AIzaSyD0iw_4SVkoghunDNnI_kLoT-gN5v18N6U
 GOOGLE_SHEET_ID=1tX9lBjDlwYagGEfbWND7SytUHHHrEz5_B7pkCrWBObA
 
+REPLICATE_API_TOKEN=r8_J8TT2567w86DPDgRdMM2pMk0Zywidvc0QlQHL
